5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1595_825.log
== SUBMITION (2019-03-31 15:21:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME:
0.130647
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 4
    fron math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:21:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME:
0.11451
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 4
    fron math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:21:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME:
0.178953
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 4
    fron math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3 ))
print(round(V,3 ))
-- EXECUTION TIME:
0.193867
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 4
    fron math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3 ))
print(round(V,3 ))
-- EXECUTION TIME:
0.179516
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 4
    fron math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3 ))
print(round(V,3 ))
-- EXECUTION TIME:
0.18479
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 4
    fron math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3 ))
print(round(V,3 ))
-- EXECUTION TIME:
0.12476
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 4
    fron math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3 ))
print(round(V,3 ))
-- EXECUTION TIME:
0.147627
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/825/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3 ))
print(round(V,3 ))
-- EXECUTION TIME:
0.22392
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 4
    fron math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
fron math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3 ))
print(round(V,3 ))
-- EXECUTION TIME:
0.167561
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/825/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:23:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r=float(input("Insira o valor do r:"))

A= pi*(r**2)
V= 4/3*pi*(r**3)
print(round(A,3 ))
print(round(V,3 ))
-- EXECUTION TIME:
0.165579
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
